# ProninTeam_test

./: .env.example  README.md  pyproject.toml
requirements/: dev.txt  prod.txt
src/backend/: manage.py
src/backend/CollectDonations/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/fundraisings/: api_views.py  apps.py  models.py  serializers.py  urls.py
src/backend/fundraisings/migrations/: 0001_initial.py  0002_alter_collect_options_collect_author_and_more.py  0003_alter_collect_image.py  0004_remove_collect_payments.py
src/backend/payments/: api_views.py  models.py  serializers.py  urls.py
src/backend/payments/migrations/: 0001_initial.py  0002_payment_collection.py
src/backend/users/: api_views.py  models.py  serializers.py  urls.py
src/backend/users/migrations/: 0001_initial.py
