[tool.poetry]
name = "proninteam-test"
version = "0.1.0"
description = ""
authors = ["NechepurenkoA <nechepurenko.work@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
djoser = "^2.2.2"
psycopg2-binary = "^2.9.9"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_glob = ["**/migrations/*.py"]
src_paths = ["src/backend"]
